--- a/index.html
+++ b/index.html
@@ -146,6 +146,42 @@
 			</section>
 			<!--//about-me-section-->
 
+			<section class="contactme-section py-5">
+				<div class="container single-col-max-width">
+					<h4 class="text-center mb-4" id="contacts_section">My Contacts</h4>
+					<div class="text-center mb-5">Interested in hiring me for your project or just want to say hi</div>
+					<table class="table table-bordered">
+						<!-- <thead>
+							<tr class="border-0">
+								<th scope="col" class="pricing-package-title pricing-1-data text-center">Fiverr</th>
+								<th scope="col" class="pricing-package-title pricing-2-data text-center">Freelancer.com
+								</th>
+							</tr>
+						</thead> -->
+						<tbody>
+							<tr class="pricing-price-row">
+								<td class="pricing-3-data"><span class="price-number">Whatsapp</span></td>
+								<td class="pricing-3-data"><span class="price-number">+92 346 98 34 211</span></td>
+							</tr>
+							<tr class="pricing-price-row">
+								<td class="pricing-3-data"><span class="price-number">Skype</span></td>
+								<td class="pricing-3-data"><span class="price-number">live:ayoubkhan558</span></td>
+							</tr>
+						</tbody>
+						<!-- <tfoot>
+							<tr class="pricing-cta-row">
+								<td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td>
+								<td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td>
+							</tr>
+						</tfoot> -->
+					</table>
+					<!--//CONTACT ME-table-->
+
+				</div>
+				<!--//container-->
+			</section>
+
+
 			<section class="overview-section p-3 p-lg-5">
 				<div class="container">
 					<h2 class="section-title font-weight-bold mb-3">My Skills</h2>
@@ -495,6 +531,182 @@
 								</div>
 							</div>
 						</div>
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
+									AMAZING GRAPHIC DESIGN AND WEBSITE WORK HIGHLY RECOMMENDED 1000% AMAZING CREATIONS.
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">amanc555</div>
+									<div class="info">Buyer, Fiver</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
+									without doubt the most excellent developer i have worked with! so patient and driven! got the tricky
+									work perfectly done! 100++ STARS Thanks again
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">mestaren16</div>
+									<div class="info">Buyer, Fiver</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
+									AMAZING 10/10 ABOVE AND BEYOND QUALITY PROJECT!!
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">amanc555</div>
+									<div class="info">Buyer, Fiver</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
+									He is an excellent developer, knows his stuff very well...Thanks
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">developerjion</div>
+									<div class="info">Buyer, Fiver</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
+									Excellent work, would use again!
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">jaypox</div>
+									<div class="info">Buyer, Fiver</div>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
+									"M. Ayoub is Extremely responsive and good to work with. Did a lot to go the extra mile. Will
+									definitely be working you again. Thank you."
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">@oXPLAY</div>
+									<div class="info">Buyer, Freelancer</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
+									"Muhammad is the best freelancer I worked with.
+									He did more than we paid for. efficient and excellently delivery. I'll always come back to engage your
+									service and I'll do well to recommend you.
+									He's such person you won't get tired of working with even if it's 1 million times. he doesn't
+									complain. he's such a great hardworking guy that deserves a lot of recommendation."
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">@oXPLAY</div>
+									<div class="info">Buyer, Freelancer</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
+									"Very understanding and intelligent. I will work with him again."
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">@oXPLAY</div>
+									<div class="info">Buyer, Freelancer</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
+									"Ayoub is highly responsive and almost always available to communicate which is the key to develop a
+									good relation, keep up the good work.
+									Thank you"
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">@hafizaqibjaved</div>
+									<div class="info">Buyer, Freelancer</div>
+								</div>
+							</div>
+						</div>
 
 					</div>
 					<!--//testimonial-carousel-->
@@ -515,28 +727,29 @@
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
-										<img src="./assets/images/project/project-1.jpg" class="card-img" alt="image">
+										<img src="./assets/images/project/project-9.jpg" class="card-img" alt="image">
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link"> Vuejs Online CV</a>
+											<h5 class="card-title"><a target="_blank" href="https://vikfougere.com"
+													class="theme-link">Vikfougere.com - CMS</a>
 											</h5>
-											<p class="card-text">The most complete & A Nice Boilerplate Template for creating your online cv
-												in Vue.js, Its a boilerplate for production-ready PWAs.</p>
-											<p class="card-text"><small class="text-muted">Client: Google</small></p>
+											<p class="card-text">Its a Amazon Affiliated Website.
+												It uses HTML5, CSS3, Scss, Bootstrap, Git, JQuery, Javascript at the frontend.
+												At the backend, it uses Core PHP with MySQL.</p>
+											<p class="card-text"><small class="text-muted">Client: Fiverr Buyer</small></p>
 										</div>
 									</div>
 								</div>
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a target="_blank" class="btn btn-secondary"
-											href="https://ayoubkhan-projects.github.io/hms-vuejs-online-cv-resume">
+										<a target="_blank" class="btn btn-secondary" href="https://vikfougere.com">
 											<i class="fas fa-eye mr-2"></i>View Live
 										</a>
-										<a target="_blank" class="btn btn-primary" href="project.html">
+										<!-- <a target="_blank" class="btn btn-primary" href="project.html">
 											<i class="fas fa-info-circle mr-2"></i> Detail
-										</a>
+										</a> -->
 									</div>
 								</div>
 								<!--//link-mask-->
@@ -552,7 +765,8 @@
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Free-Ela</a></h5>
+											<h5 class="card-title"><a target="_blank" href="project.html" class="theme-link">Free-Ela website
+													Frontend</a></h5>
 											<p class="card-text">Free-ela is a Micro Job Marketplace site..
 												I have worked with HTML5, CSS3, Scss, Javascript, QJuery and forms on this project.</p>
 											<p class="card-text"><small class="text-muted">Client: Hafiz Aqib</small></p>
@@ -579,25 +793,28 @@
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
-										<img src="./assets/images/project/project-3.jpg" class="card-img" alt="image">
+										<img src="./assets/images/project/project-11.jpg" class="card-img" alt="image">
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Edutainment</a></h5>
-											<p class="card-text">Edutainment - An Educational Entertainment Company... </p>
-											<p class="card-text"><small class="text-muted">Client: Google</small></p>
+											<h5 class="card-title"><a target="_blank" href="http://coins-deck.com/" class="theme-link">Coins-Deck</a>
+											</h5>
+											<p class="card-text">Coins-Deck is an investment platform. 
+												Its build-in Laravel 5.5. I have worked with HTML5, CSS3, Scss, PHP & Laravel in this project.
+											</p>
+											<p class="card-text"><small class="text-muted">Client: Freelancer Buyer</small></p>
 										</div>
 									</div>
 								</div>
 								<div class="link-mask">
-									<a class="link-mask-link" href="project.html"></a>
+									<a class="link-mask-link" href="http://coins-deck.com/"></a>
 									<div class="link-mask-text">
-										<a target="_blank" class="btn btn-secondary" href="http://edutainment.com.pk/">
+										<a target="_blank" class="btn btn-secondary" href="http://coins-deck.com/">
 											<i class="fas fa-eye mr-2"></i> Live
 										</a>
-										<a target="_blank" class="btn btn-primary" href="project.html">
+										<!-- <a target="_blank" class="btn btn-primary" href="http://coins-deck.com/">
 											<i class="fas fa-info-circle mr-2"></i> Detail
-										</a>
+										</a> -->
 									</div>
 								</div>
 								<!--//link-mask-->
@@ -613,7 +830,8 @@
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">SodaSulf Grocery Store App</a>
+											<h5 class="card-title"><a target="_blank" href="project.html" class="theme-link">SodaSulf Grocery
+													Store App</a>
 											</h5>
 											<p class="card-text">Soda Sulf : A complete Online Grocery Store in Sahiwal.
 												SodaSulfs is a android app. Its a Hybrid Mobile App created this app with Ionic 4 and Angular 7
@@ -660,7 +878,7 @@
 							<div class="card blog-post-card">
 								<img class="card-img-top" src="./assets/images/blog/blog-post-thumb-card-1.jpg" alt="image">
 								<div class="card-body">
-									<h5 class="card-title"><a class="theme-link" target="_blank"
+									<h5 class="card-title"><a target="_blank" class="theme-link" target="_blank"
 											href="https://medium.com/@ayoubkhan558/firebase-authentication-in-vue-js-2-with-vuefire-d316efbeddaa">Firebase
 											Authentication in Vue.js 2 with VueFire</a>
 									</h5>
@@ -683,7 +901,7 @@
 							<div class="card blog-post-card">
 								<img class="card-img-top" src="https://i.stack.imgur.com/Z6YUF.jpg" alt="image">
 								<div class="card-body">
-									<h5 class="card-title"><a class="theme-link" target="_blank"
+									<h5 class="card-title"><a target="_blank" class="theme-link" target="_blank"
 											href="https://topmosthings.com/top-reason-to-use-react-in-2020/">Top Reasons to Use React in
 											2020</a></h5>
 									<p class="card-text">Last few years React totally overtook all the other front-end competition in
@@ -703,7 +921,7 @@
 							<div class="card blog-post-card">
 								<img class="card-img-top" src="https://i.stack.imgur.com/bk67f.png" alt="image">
 								<div class="card-body">
-									<h5 class="card-title"><a class="theme-link" target="_blank"
+									<h5 class="card-title"><a target="_blank" class="theme-link" target="_blank"
 											href="https://topmosthings.com/new-javascript-ui-libraries-frameworks-for-2020/">New JavaScript UI
 											libraries & frameworks for 2020</a></h5>
 									<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
@@ -744,12 +962,12 @@
 		<script src="./assets/plugins/bootstrap/bootstrap.bundle.min.js"></script>
 		<script src="./assets/plugins/owlcarousel/owl.carousel.min.js"></script>
 		<script src="./assets/js/testimonials.js"></script>
-		
+
 		<!-- Dark Mode -->
 		<script src="./assets/plugins/js-cookie.min.js"></script>
 		<script src="./assets/js/dark-mode.js"></script>
 
-	
+
 		<!--Start of Tawk.to Script-->
 		<script type="text/javascript">
 			var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
