--- a/portfolio.html
+++ b/portfolio.html
@@ -139,6 +139,36 @@
 					</div>
 
 					<div class="project-cards row isotope">
+						<div class="isotope-item col-md-6 mb-5 webapp frontend backend">
+							<div class="card project-card">
+								<div class="row no-gutters">
+									<div class="col-lg-4 card-img-holder">
+										<img src="./assets/images/project/project-9.jpg" class="card-img" alt="image">
+									</div>
+									<div class="col-lg-8">
+										<div class="card-body">
+											<h5 class="card-title"><a target="_blank" href="https://vikfougere.com"
+													class="theme-link">Vikfougere.com - CMS</a></h5>
+											<p class="card-text">Its a Amazon Affiliated Website.
+												It uses HTML5, CSS3, Scss, Bootstrap, Git, JQuery, Javascript at the frontend.
+												At the backend, it uses Core PHP with MySQL.</p>
+											<p class="card-text"><small class="text-muted">Client: Fiverr</small></p>
+										</div>
+									</div>
+								</div>
+								<div class="link-mask">
+									<div class="link-mask-text">
+										<a target="_blank" class="btn btn-secondary" href="https://vikfougere.com">
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<!-- <a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
+										</a> -->
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--//col-->
 						<div class="isotope-item col-md-6 mb-5 webapp frontend">
 							<div class="card project-card">
 								<div class="row no-gutters">
@@ -147,7 +177,8 @@
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Free-Ela</a></h5>
+											<h5 class="card-title"><a target="_blank" href="project.html" class="theme-link">Free-Ela website
+													Frontend</a></h5>
 											<p class="card-text">Free-ela is a Micro Job Marketplace site..
 												I have worked with HTML5, CSS3, Scss, Javascript, QJuery and forms on this project.</p>
 											<p class="card-text"><small class="text-muted">Client: Hafiz Aqib</small></p>
@@ -177,7 +208,8 @@
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Vuejs Online CV Resume</a>
+											<h5 class="card-title"><a target="_blank" href="project.html" class="theme-link">Vuejs Online CV
+													Resume</a>
 											</h5>
 											<p class="card-text">The most complete & A Nice Boilerplate Template for creating your online cv
 												in Vue.js, Its a boilerplate for production-ready PWAs.</p>
@@ -200,6 +232,38 @@
 							<!--//card-->
 						</div>
 						<!--//col-->
+						<div class="isotope-item col-md-6 mb-5 webapp frontend backend">
+							<div class="card project-card">
+								<div class="row no-gutters">
+									<div class="col-lg-4 card-img-holder">
+										<img src="./assets/images/project/project-11.jpg" class="card-img" alt="image">
+									</div>
+									<div class="col-lg-8">
+										<div class="card-body">
+											<h5 class="card-title"><a target="_blank" href="http://coins-deck.com/"
+													class="theme-link">Coins-Deck</a></h5>
+											<p class="card-text">Coins-Deck is an investment platform.
+												Its build-in Laravel 5.5. I have worked with HTML5, CSS3, Scss, PHP & Laravel in this project.
+											</p>
+											<p class="card-text"><small class="text-muted">Client: Freelancer Buyer</small></p>
+										</div>
+									</div>
+								</div>
+								<div class="link-mask">
+									<div class="link-mask-text">
+										<a target="_blank" class="btn btn-secondary" href="http://coins-deck.com/">
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<!-- <a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
+										</a> -->
+									</div>
+								</div>
+								<!--//link-mask-->
+							</div>
+							<!--//card-->
+						</div>
+						<!--//col-->
 						<div class="isotope-item col-md-6 mb-5 webapp frontend">
 							<div class="card project-card">
 								<div class="row no-gutters">
@@ -208,7 +272,8 @@
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Edutainment</a></h5>
+											<h5 class="card-title"><a target="_blank" href="project.html" class="theme-link">Edutainment</a>
+											</h5>
 											<p class="card-text">Edutainment - An Educational Entertainment Company</p>
 											<p class="card-text"><small class="text-muted">Client: Google</small></p>
 										</div>
@@ -237,7 +302,8 @@
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Markhors Website</a></h5>
+											<h5 class="card-title"><a target="_blank" href="project.html" class="theme-link">Markhors
+													Website</a></h5>
 											<p class="card-text">This was a small project for BS students of University of Sahiwal. I have
 												used html5, css3, javascript, jquery and Bootstrap 3 in this project.</p>
 											<p class="card-text"><small class="text-muted">Client: Haseeb Raza</small></p>
@@ -267,7 +333,8 @@
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">SodaSulf Grocery Store App</a>
+											<h5 class="card-title"><a target="_blank" href="project.html" class="theme-link">SodaSulf Grocery
+													Store App</a>
 											</h5>
 											<p class="card-text">Soda Sulf : A complete Online Grocery Store in Sahiwal.
 												SodaSulfs is a android app. Its a Hybrid Mobile App created this app with Ionic 4 and Angular 7
@@ -291,34 +358,6 @@
 							<!--//card-->
 						</div>
 						<!--//col-->
-						<div class="isotope-item col-md-6 mb-5 webapp frontend">
-							<div class="card project-card">
-								<div class="row no-gutters">
-									<div class="col-lg-4 card-img-holder">
-										<img src="./assets/images/project/project-4.jpg" class="card-img" alt="image">
-									</div>
-									<div class="col-lg-8">
-										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
-											<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-											<p class="card-text"><small class="text-muted">Client: Startup Hub</small></p>
-										</div>
-									</div>
-								</div>
-								<div class="link-mask">
-									<div class="link-mask-text">
-										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i> Live
-										</a>
-										<a target="_blank" class="btn btn-primary" href="project.html">
-											<i class="fas fa-info-circle mr-2"></i> Detail
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<!--//col-->
 						<!-- <div class="isotope-item col-md-6 mb-5 webapp frontend">
 							<div class="card project-card">
 								<div class="row no-gutters">
@@ -327,7 +366,7 @@
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
+											<h5 class="card-title"><a target="_blank"  href="project.html" class="theme-link">Project Heading</a></h5>
 											<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque
 												penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
 											<p class="card-text"><small class="text-muted">Client: Startup Hub</small></p>
@@ -370,12 +409,12 @@
 		<script type="text/javascript" src="./assets/plugins/isotope.pkgd.min.js"></script>
 		<script type="text/javascript" src="./assets/js/isotope-custom.js"></script>
 
-		
+
 		<!-- Dark Mode -->
 		<script src="./assets/plugins/js-cookie.min.js"></script>
 		<script src="./assets/js/dark-mode.js"></script>
 
-	
+
 		<!--Start of Tawk.to Script-->
 		<script type="text/javascript">
 			var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
