--- a/services.html
+++ b/services.html
@@ -136,25 +136,25 @@
 							<tr class="border-0">
 								<th scope="col" class="pricing-0-data theme-bg-light"></th>
 								<th scope="col" class="pricing-package-title pricing-1-data">Basic</th>
-								<th scope="col" class="pricing-package-title pricing-2-data mobile-is-hidden">Standard</th>
-								<th scope="col" class="pricing-package-title pricing-3-data mobile-is-hidden">Premium</th>
+								<th scope="col" class="pricing-package-title pricing-2-data">Standard</th>
+								<th scope="col" class="pricing-package-title pricing-3-data">Premium</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr class="pricing-price-row">
 								<th scope="row" class="pricing-0-data">Package Price</th>
 								<td class="pricing-1-data"><span class="price-number">$50+</span></td>
-								<td class="pricing-2-data mobile-is-hidden"><span class="price-number">$350+</span></td>
-								<td class="pricing-3-data mobile-is-hidden"><span class="price-number">$750+</span></td>
+								<td class="pricing-2-data"><span class="price-number">$350+</span></td>
+								<td class="pricing-3-data"><span class="price-number">$750+</span></td>
 							</tr>
 
 							<tr class="pricing-desc-row">
 								<th scope="row" class="pricing-0-data">Details</th>
 								<td class="pricing-1-data"><span class="pricing-package-desc">Simple 3 to 4 Section Page Website with
 										fully responsivness.</span></td>
-								<td class="pricing-2-data mobile-is-hidden"><span class="pricing-package-desc">omplex pages of a website
+								<td class="pricing-2-data"><span class="pricing-package-desc">omplex pages of a website
 										with PSD design if demanded.</span></td>
-								<td class="pricing-3-data mobile-is-hidden"><span class="pricing-package-desc">Fully Responsive
+								<td class="pricing-3-data"><span class="pricing-package-desc">Fully Responsive
 										website.</span></td>
 							</tr>
 
@@ -163,51 +163,51 @@
 										class="feature-desc font-weight-normal text-muted">Optional feature description goes here. Lorem
 										ipsum dolor sit amet, consectetuer adipiscing elit.</small></th>
 								<td class="pricing-1-data"><i class="fas fa-check text-primary"></i></td>
-								<td class="pricing-2-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
-								<td class="pricing-3-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
+								<td class="pricing-2-data"><i class="fas fa-check text-primary"></i></td>
+								<td class="pricing-3-data"><i class="fas fa-check text-primary"></i></td>
 							</tr>
 							<tr class="pricing-feature-row">
 								<th class="pricing-feature-row-name pricing-0-data" scope="row">Feature Ipsum<br><small
 										class="feature-desc font-weight-normal text-muted">Optional feature description goes here. Lorem
 										ipsum dolor sit amet, consectetuer adipiscing elit.</small></th>
 								<td class="pricing-1-data"><i class="fas fa-check text-primary"></i></td>
-								<td class="pricing-2-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
+								<td class="pricing-2-data"><i class="fas fa-check text-primary"></i></td>
 							</tr>
 							<tr class="pricing-feature-row">
 								<th class="pricing-feature-row-name pricing-0-data" scope="row">Responsive</th>
 								<td class="pricing-1-data"><i class="fas fa-check text-primary"></i></td>
-								<td class="pricing-2-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
-								<td class="pricing-3-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
+								<td class="pricing-2-data"><i class="fas fa-check text-primary"></i></td>
+								<td class="pricing-3-data"><i class="fas fa-check text-primary"></i></td>
 							</tr>
 							<tr class="pricing-feature-row">
 								<th class="pricing-feature-row-name pricing-0-data" scope="row">Feature Consectetuer</th>
 								<td class="pricing-1-data"><span class="text-muted">–</span></td>
-								<td class="pricing-2-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
-								<td class="pricing-3-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
+								<td class="pricing-2-data"><i class="fas fa-check text-primary"></i></td>
+								<td class="pricing-3-data"><i class="fas fa-check text-primary"></i></td>
 							</tr>
 							<tr class="pricing-feature-row">
 								<th class="pricing-feature-row-name pricing-0-data" scope="row">Feature Aenean</th>
 								<td class="pricing-1-data"><span class="text-muted">–</span></td>
-								<td class="pricing-2-data mobile-is-hidden"><span class="text-muted">–</span></td>
-								<td class="pricing-3-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
+								<td class="pricing-2-data"><span class="text-muted">–</span></td>
+								<td class="pricing-3-data"><i class="fas fa-check text-primary"></i></td>
 							</tr>
 							<tr class="pricing-feature-row">
 								<th class="pricing-feature-row-name pricing-0-data" scope="row">Source File</th>
 								<td class="pricing-1-data"><span class="text-muted">–</span></td>
-								<td class="pricing-2-data mobile-is-hidden"><span class="text-muted">–</span></td>
-								<td class="pricing-3-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
+								<td class="pricing-2-data"><span class="text-muted">–</span></td>
+								<td class="pricing-3-data"><i class="fas fa-check text-primary"></i></td>
 							</tr>
 							<tr class="pricing-feature-row">
 								<th class="pricing-feature-row-name pricing-0-data" scope="row">Revisions</th>
 								<td class="pricing-1-data"><span class="text-muted">1</span></td>
-								<td class="pricing-2-data mobile-is-hidden"><span class="text-muted">2</span></td>
-								<td class="pricing-3-data mobile-is-hidden">5+</td>
+								<td class="pricing-2-data"><span class="text-muted">2</span></td>
+								<td class="pricing-3-data">5+</td>
 							</tr>
 							<tr class="pricing-feature-row">
 								<th class="pricing-feature-row-name pricing-0-data" scope="row">Delivery Time</th>
 								<td class="pricing-1-data">5 days</td>
-								<td class="pricing-2-data mobile-is-hidden">10 days</td>
-								<td class="pricing-3-data mobile-is-hidden">1 - 2 month(s)</td>
+								<td class="pricing-2-data">10 days</td>
+								<td class="pricing-3-data">1 - 2 month(s)</td>
 							</tr>
 
 						</tbody>
@@ -215,8 +215,8 @@
 							<tr class="pricing-cta-row">
 								<td class="pricing-0-data"></td>
 								<td class="pricing-1-data"><a class="btn btn-primary" href="#">Book Now</a></td>
-								<td class="pricing-2-data mobile-is-hidden"><a class="btn btn-primary" href="#">Book Now</a></td>
-								<td class="pricing-3-data mobile-is-hidden"><a class="btn btn-primary" href="#">Get A Quote</a></td>
+								<td class="pricing-2-data"><a class="btn btn-primary" href="#">Book Now</a></td>
+								<td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td>
 							</tr>
 						</tfoot>
 					</table>
@@ -341,22 +341,22 @@
 						<thead>
 							<tr class="border-0">
 								<th scope="col" class="pricing-package-title pricing-1-data text-center">Fiverr</th>
-								<th scope="col" class="pricing-package-title pricing-2-data text-center mobile-is-hidden">Freelancer.com</th>
-								<!-- <th scope="col" class="pricing-package-title pricing-3-data mobile-is-hidden">Premium</th> -->
+								<th scope="col" class="pricing-package-title pricing-2-data text-center">Freelancer.com</th>
+								<!-- <th scope="col" class="pricing-package-title pricing-3-data">Premium</th> -->
 							</tr>
 						</thead>
 						<tbody>
 							<tr class="pricing-price-row">
-								<td class="pricing-2-data mobile-is-hidden"><img height="150" width="" src="./assets/images/logos/fiverr-logo-png-2.png" alt="" class="img-fluid"></td>
-								<td class="pricing-2-data mobile-is-hidden"><img height="150" width="" src="./assets/images/logos/freelancerlogo1.png" alt="" class="img-fluid"></td>
-								<!-- <td class="pricing-3-data mobile-is-hidden"><span class="price-number">$750+</span></td> -->
+								<td class="pricing-2-data"><img height="150" width="" src="./assets/images/logos/fiverr-logo-png-2.png" alt="" class="img-fluid"></td>
+								<td class="pricing-2-data"><img height="150" width="" src="./assets/images/logos/freelancerlogo1.png" alt="" class="img-fluid"></td>
+								<!-- <td class="pricing-3-data"><span class="price-number">$750+</span></td> -->
 							</tr>
 						</tbody>
 						<tfoot>
 							<tr class="pricing-cta-row">
 								<td class="pricing-1-data text-center"><a class="btn btn-primary" href="https://www.fiverr.com/mayoub55"><i class="fas fa-paper-plane mr-2"></i> Visit Profile</a></td>
-								<td class="pricing-2-data text-center mobile-is-hidden"><a class="btn btn-primary" href="https://www.freelancer.pk/u/ayoubkhan558"><i class="fas fa-paper-plane mr-2"></i> Visit Profile</a></td>
-								<!-- <td class="pricing-3-data mobile-is-hidden"><a class="btn btn-primary" href="#">Get A Quote</a></td> -->
+								<td class="pricing-2-data text-center"><a class="btn btn-primary" href="https://www.freelancer.pk/u/ayoubkhan558"><i class="fas fa-paper-plane mr-2"></i> Visit Profile</a></td>
+								<!-- <td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td> -->
 							</tr>
 						</tfoot>
 					</table>
