--- a/contact.html
+++ b/contact.html
@@ -144,38 +144,68 @@
 				</div>
 				<!--//container-->
 			</section>
+
+			<section class="contactme-section py-5">
+				<div class="container single-col-max-width">
+					<h4 class="text-center mb-4" id="contacts_section">My Contacts</h4>
+					<div class="text-center mb-5">Interested in hiring me for your project or just want to say hi</div>
+					<table class="table table-bordered">
+						<!-- <thead>
+							<tr class="border-0">
+								<th scope="col" class="pricing-package-title pricing-1-data text-center">Fiverr</th>
+								<th scope="col" class="pricing-package-title pricing-2-data text-center">Freelancer.com
+								</th>
+							</tr>
+						</thead> -->
+						<tbody>
+							<tr class="pricing-price-row">
+								<td class="pricing-3-data"><span class="price-number">Whatsapp</span></td>
+								<td class="pricing-3-data"><span class="price-number">+92 346 98 34 211</span></td>
+							</tr>
+							<tr class="pricing-price-row">
+								<td class="pricing-3-data"><span class="price-number">Skype</span></td>
+								<td class="pricing-3-data"><span class="price-number">live:ayoubkhan558</span></td>
+							</tr>
+						</tbody>
+						<!-- <tfoot>
+							<tr class="pricing-cta-row">
+								<td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td>
+								<td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td>
+							</tr>
+						</tfoot> -->
+					</table>
+					<!--//CONTACT ME-table-->
+
+				</div>
+				<!--//container-->
+			</section>
+
+			<!--//profiles-section-->
 			<section class="contact-section px-3 py-5 p-md-5">
 				<div class="container">
-					<form action="https://send.pageclip.co/gHOqbUdqFgD8vd7VYRTdwan2S6haupfC/contact_form" class="pageclip-form"
-						method="post"></form>
-					<!-- text field -->
-					<input type="email" name="email" value="bob@omg.com" />
+					<!-- <form action="https://send.pageclip.co/gHOqbUdqFgD8vd7VYRTdwan2S6haupfC/contact_form" class="pageclip-form"
+						method="post">
+						<input type="email" name="email" value="bob@omg.com" />
 
-					<select name="heardFrom">
-						<option value="ph" selected>Product Hunt</option>
-						<option value="hn">Hacker News</option>
-					</select>
+						<select name="heardFrom">
+							<option value="ph" selected>Product Hunt</option>
+							<option value="hn">Hacker News</option>
+						</select>
+						<input type="radio" name="animal" value="tarantula" id="tarantula" checked />
+						<label htmlFor="tarantula">Tarantula</label>
 
-					<!-- radio buttons -->
-					<input type="radio" name="animal" value="tarantula" id="tarantula" checked />
-					<label htmlFor="tarantula">Tarantula</label>
+						<input type="radio" name="animal" value="turtle" id="turtle" />
+						<label htmlFor="turtle">Turtle</label>
+						<input type="checkbox" name="likes[pizza]" id="pizza" checked />
+						<label htmlFor="pizza">Pizza 🍕</label>
 
-					<input type="radio" name="animal" value="turtle" id="turtle" />
-					<label htmlFor="turtle">Turtle</label>
-
-					<!-- checkboxes -->
-					<input type="checkbox" name="likes[pizza]" id="pizza" checked />
-					<label htmlFor="pizza">Pizza 🍕</label>
-
-					<input type="checkbox" name="likes[yams]" id="yams" />
-					<label htmlFor="yams">Sweet Potatos 🍠</label>
-
-					<!-- hidden inputs -->
-					<input type="hidden" name="version" value="v1" />
-					<button class="pageclip-form__submit" type="button">
-						<span>Submit</span>
-					</button>
-					</form>
+						<input type="checkbox" name="likes[yams]" id="yams" />
+						<label htmlFor="yams">Sweet Potatos 🍠</label>
+						<input type="hidden" name="version" value="v1" />
+						<button class="pageclip-form__submit" type="button">
+							<span>Submit</span>
+						</button>
+					</form> -->
 					<form class="contact-form col-lg-8 mx-lg-auto" method="post" action="#" name="contact_form"
 						data-netlify="true" netlify>
 						<h3 class="text-center mb-3">Get In Touch</h3>
@@ -226,7 +256,60 @@
 				<!--//container-->
 			</section>
 
-			<div id="demo"></div>
+			<div id="demo">
+				<section class="pricing-section py-5">
+					<div class="container single-col-max-width">
+						<h4 class="text-center mb-4" id="freelancing_profiles">Freelancing Profiles</h4>
+						<div class="text-center mb-5">Visit my freelancing profiles to order custom service</div>
+						<table class="table table-bordered">
+							<thead>
+								<tr class="border-0">
+									<th scope="col" class="pricing-package-title pricing-1-data text-center">Fiverr</th>
+									<th scope="col" class="pricing-package-title pricing-2-data text-center">Freelancer.com
+									</th>
+									<!-- <th scope="col" class="pricing-package-title pricing-3-data">Premium</th> -->
+								</tr>
+							</thead>
+							<tbody>
+								<tr class="pricing-price-row">
+									<td class="pricing-2-data"><img height="150" width=""
+											src="./assets/images/logos/fiverr-logo-png-2.png" alt="" class="img-fluid"></td>
+									<td class="pricing-2-data"><img height="150" width="" src="./assets/images/logos/freelancerlogo1.png"
+											alt="" class="img-fluid"></td>
+									<!-- <td class="pricing-3-data"><span class="price-number">$750+</span></td> -->
+								</tr>
+							</tbody>
+							<tfoot>
+								<tr class="pricing-cta-row">
+									<td class="pricing-1-data text-center"><a class="btn btn-primary"
+											href="https://www.fiverr.com/mayoub55"><svg class="svg-inline--fa fa-paper-plane fa-w-16 mr-2"
+												aria-hidden="true" focusable="false" data-prefix="fas" data-icon="paper-plane" role="img"
+												xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+												<path fill="currentColor"
+													d="M476 3.2L12.5 270.6c-18.1 10.4-15.8 35.6 2.2 43.2L121 358.4l287.3-253.2c5.5-4.9 13.3 2.6 8.6 8.3L176 407v80.5c0 23.6 28.5 32.9 42.5 15.8L282 426l124.6 52.2c14.2 6 30.4-2.9 33-18.2l72-432C515 7.8 493.3-6.8 476 3.2z">
+												</path>
+											</svg><!-- <i class="fas fa-paper-plane mr-2"></i> --> Visit Profile</a>
+									</td>
+									<td class="pricing-2-data text-center"><a class="btn btn-primary"
+											href="https://www.freelancer.pk/u/ayoubkhan558"><svg
+												class="svg-inline--fa fa-paper-plane fa-w-16 mr-2" aria-hidden="true" focusable="false"
+												data-prefix="fas" data-icon="paper-plane" role="img" xmlns="http://www.w3.org/2000/svg"
+												viewBox="0 0 512 512" data-fa-i2svg="">
+												<path fill="currentColor"
+													d="M476 3.2L12.5 270.6c-18.1 10.4-15.8 35.6 2.2 43.2L121 358.4l287.3-253.2c5.5-4.9 13.3 2.6 8.6 8.3L176 407v80.5c0 23.6 28.5 32.9 42.5 15.8L282 426l124.6 52.2c14.2 6 30.4-2.9 33-18.2l72-432C515 7.8 493.3-6.8 476 3.2z">
+												</path>
+											</svg><!-- <i class="fas fa-paper-plane mr-2"></i> --> Visit
+											Profile</a></td>
+									<!-- <td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td> -->
+								</tr>
+							</tfoot>
+						</table>
+						<!--//pricing-table-->
+
+					</div>
+					<!--//container-->
+				</section>
+			</div>
 			<!--//profiles-section-->
 
 
@@ -251,7 +334,7 @@
 		<!-- Custom JS -->
 		<script type="text/javascript" src="./assets/js/form.js"></script>
 
-		
+
 		<!-- Dark Mode -->
 		<script src="./assets/plugins/js-cookie.min.js"></script>
 		<script src="./assets/js/dark-mode.js"></script>
@@ -262,7 +345,7 @@
 				$("#demo").load("imports/profiles.html");
 			});
 		</script>
-	
+
 		<!--Start of Tawk.to Script-->
 		<script type="text/javascript">
 			var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
