--- a/imports/profiles.html
+++ b/imports/profiles.html
@@ -6,18 +6,18 @@
 			<thead>
 				<tr class="border-0">
 					<th scope="col" class="pricing-package-title pricing-1-data text-center">Fiverr</th>
-					<th scope="col" class="pricing-package-title pricing-2-data text-center mobile-is-hidden">Freelancer.com
+					<th scope="col" class="pricing-package-title pricing-2-data text-center">Freelancer.com
 					</th>
-					<!-- <th scope="col" class="pricing-package-title pricing-3-data mobile-is-hidden">Premium</th> -->
+					<!-- <th scope="col" class="pricing-package-title pricing-3-data">Premium</th> -->
 				</tr>
 			</thead>
 			<tbody>
 				<tr class="pricing-price-row">
-					<td class="pricing-2-data mobile-is-hidden"><img height="150" width=""
+					<td class="pricing-2-data"><img height="150" width=""
 							src="./assets/images/logos/fiverr-logo-png-2.png" alt="" class="img-fluid"></td>
-					<td class="pricing-2-data mobile-is-hidden"><img height="150" width=""
+					<td class="pricing-2-data"><img height="150" width=""
 							src="./assets/images/logos/freelancerlogo1.png" alt="" class="img-fluid"></td>
-					<!-- <td class="pricing-3-data mobile-is-hidden"><span class="price-number">$750+</span></td> -->
+					<!-- <td class="pricing-3-data"><span class="price-number">$750+</span></td> -->
 				</tr>
 			</tbody>
 			<tfoot>
@@ -25,10 +25,10 @@
 					<td class="pricing-1-data text-center"><a class="btn btn-primary" href="https://www.fiverr.com/mayoub55"><i
 								class="fas fa-paper-plane mr-2"></i> Visit Profile</a>
 					</td>
-					<td class="pricing-2-data text-center mobile-is-hidden"><a class="btn btn-primary"
+					<td class="pricing-2-data text-center"><a class="btn btn-primary"
 							href="https://www.freelancer.pk/u/ayoubkhan558"><i class="fas fa-paper-plane mr-2"></i> Visit
 							Profile</a></td>
-					<!-- <td class="pricing-3-data mobile-is-hidden"><a class="btn btn-primary" href="#">Get A Quote</a></td> -->
+					<!-- <td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td> -->
 				</tr>
 			</tfoot>
 		</table>
