--- a/resume.html
+++ b/resume.html
@@ -18,15 +18,14 @@
 
 		<!-- Owl Stylesheets -->
 		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
-
 		<!-- Theme CSS -->
 		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-8.css">
 		<link rel="stylesheet" href="./assets/css/theme-new.css">
 
 	</head>
 
-		<body>
-		
+	<body>
+
 
 		<header class="header text-center">
 			<div class="force-overflow">
@@ -41,7 +40,7 @@
 
 					<div id="navigation" class="collapse navbar-collapse flex-column">
 						<div class="profile-section pt-3 pt-lg-0">
-							<img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image">
+							<img class="profile-image mb-3 rounded-circle mx-auto" src="./assets/images/profile.png" alt="image">
 
 							<div class="bio mb-3">Hi, I'm Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
 								website!</div>
@@ -54,7 +53,7 @@
 								<li class="list-inline-item"><a target="_blank" href="https://github.com/ayoubkhan558"><i
 											class="fab fa-github-alt fa-fw"></i></a></li>
 								<li class="list-inline-item"><a target="_blank" href="https://stackoverflow.com/users/9207553/mohammad-ayoub-khan
-	"><i class="fab fa-stack-overflow fa-fw"></i></a></li>
+"><i class="fab fa-stack-overflow fa-fw"></i></a></li>
 								<li class="list-inline-item"><a target="_blank" href="https://codepen.io/ayoubkhan558"><i
 											class="fab fa-codepen fa-fw"></i></a></li>
 							</ul>
@@ -75,8 +74,7 @@
 									Pricing</a>
 							</li>
 							<li class="nav-item active">
-								<a class="nav-link" href="resume.html"><i class="fas fa-file-alt fa-fw mr-2"></i>Resume<span
-										class="sr-only">(current)</span></a>
+								<a class="nav-link" href="resume.html"><i class="fas fa-file-alt fa-fw mr-2"></i>Resume</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="blog-home.html"><i class="fas fa-blog fa-fw mr-2"></i>Blog</a>
@@ -111,14 +109,12 @@
 			<section class="cta-section theme-bg-light py-5">
 				<div class="container text-center single-col-max-width">
 					<h2 class="heading mb-3">Online Resume</h2>
-					<a class="btn btn-danger"
+					<a class="btn btn-sm btn-danger mt-3"
 						href="https://themes.3rdwavemedia.com/resources/sketch-template/resume-sketch-sketch-resume-template-for-software-developers/"
 						target="_blank"><i class="fas fa-file-pdf mr-2"></i>Download PDF Version</a>
-					<a class="btn btn-info"
+					<a class="btn btn-sm btn-info mt-3"
 						href="https://themes.3rdwavemedia.com/resources/sketch-template/resume-sketch-sketch-resume-template-for-software-developers/"
 						target="_blank"><i class="fas fa-file-word mr-2"></i>Download Word Version</a>
-
-
 				</div>
 				<!--//container-->
 			</section>
@@ -527,14 +523,14 @@
 
 		<!-- Javascript -->
 		<script defer src="./assets/fontawesome/js/all.js"></script>
-		<script src="assets/plugins/jquery-3.4.1.min.js"></script>
-		<script src="assets/plugins/popper.min.js"></script>
-		<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+		<script src="./assets/plugins/jquery-3.4.1.min.js"></script>
+		<script src="./assets/plugins/bootstrap/bootstrap.bundle.min.js"></script>
+
 
 		<!-- Dark Mode -->
-		<script src="assets/plugins/js-cookie.min.js"></script>
-		<script src="assets/js/dark-mode.js"></script>
-	
+		<script src="./assets/plugins/js-cookie.min.js"></script>
+		<script src="./assets/js/dark-mode.js"></script>
+
 		<!--Start of Tawk.to Script-->
 		<script type="text/javascript">
 			var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
